--- a/test/fixtures/articles.yml
+++ b/test/fixtures/articles.yml
@@ -1,5 +1,30 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
+# == Schema Information
+#
+# Table name: articles
+#
+#  id           :bigint           not null, primary key
+#  content      :text
+#  excerpt      :string
+#  published    :boolean          default(FALSE)
+#  published_at :datetime
+#  slug         :string
+#  title        :string
+#  created_at   :datetime         not null
+#  updated_at   :datetime         not null
+#  user_id      :bigint           not null
+#
+# Indexes
+#
+#  index_articles_on_slug     (slug) UNIQUE
+#  index_articles_on_title    (title) UNIQUE
+#  index_articles_on_user_id  (user_id)
+#
+# Foreign Keys
+#
+#  fk_rails_...  (user_id => users.id)
+#
 one:
   user: one
   title: MyString
