--- a/test/fixtures/books.yml
+++ b/test/fixtures/books.yml
@@ -1,5 +1,25 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
+# == Schema Information
+#
+# Table name: books
+#
+#  id          :bigint           not null, primary key
+#  author_name :string
+#  description :text
+#  excerpt     :text
+#  isbn        :string
+#  pages_count :integer          default(0)
+#  slug        :string
+#  title       :string
+#  created_at  :datetime         not null
+#  updated_at  :datetime         not null
+#
+# Indexes
+#
+#  index_books_on_slug   (slug) UNIQUE
+#  index_books_on_title  (title) UNIQUE
+#
 one:
   title: MyString
   isbn: MyString
